--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cricscore",
+  "homepage": "https://tejas588.github.io/cricscore/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
